projects: fix fork button alignment on mobile

--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -97,9 +97,6 @@
   .github {
     float: none;
   }
-  .fork {
-    margin-top: 20px;
-  }
   .single-chart {
     max-width: 30%;
   }
